<resources>
    <string name="app_name">EcoTrack-v1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_select">Who do you want to be?</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="logout">Logout\n</string>
    <string name="LoginPrompt">Already a user? Login</string>
    <string name="my_api_key">AIzaSyBZCU0xBr1697ajAuOyBJdkFjlaXXrw5Uk</string>

</resources>